syntax = "proto3";

package services.scalable.index.grpc;

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";

option (scalapb.options) = {
  single_file: true
  flat_package: true
  preserve_unknown_fields: false
  preamble: "trait IndexCommand"
};

message KVPair {
  bytes key = 1;
  bytes value = 2;
  string version = 3;
}

message KVPairInsertion {
  bytes key = 1;
  bytes value = 2;
  bool upsert = 3;
  string version = 4;
}

message KVersionPair {
  bytes key = 1;
  string version = 2;
}

message Link {
  bytes key = 1;
  string partition = 2;
  string id = 3;
  int64 nSubtree = 4;
  int32 level = 5;
}

message RootRef {
  string partition = 1;
  string id = 2;
}

message LeafBlock {
  string id = 1;
  string partition = 2;
  repeated KVPair tuples = 3;
  int32 min = 4;
  int32 max = 5;

  optional RootRef root = 6;
  int32 level = 7;
}

message MetaBlock {
  string id = 1;
  string partition = 2;
  repeated Link pointers = 3;
  int32 min = 4;
  int32 max = 5;

  optional RootRef root = 6;
  int32 level = 7;
}

message IndexContext {
  string id = 1;
  int32 num_leaf_items = 2;
  int32 num_meta_items = 3;
  optional RootRef root = 4;
  int32 levels = 5;
  int64 num_elements = 6;

  int32 maxNItems = 7;
  string lastChangeVersion = 8;
}

message TemporalContext {
  string id = 1;
  IndexContext latest = 2 [(scalapb.field).no_box = true];
  IndexContext history = 3 [(scalapb.field).no_box = true];
}

message DecimalValue {
  uint32 scale = 1;
  uint32 precision = 2;
  bytes value = 3;
}

message InsertCommand {
  option (scalapb.message).extends = "services.scalable.index.grpc.IndexCommand";

  string indexId = 1;
  repeated services.scalable.index.grpc.KVPairInsertion list = 2;
  optional string version = 3;
}

message UpdateCommand {
  option (scalapb.message).extends = "services.scalable.index.grpc.IndexCommand";

  string indexId = 1;
  repeated services.scalable.index.grpc.KVPair list = 2;
  optional string version = 3;
}

message RemoveCommand {
  option (scalapb.message).extends = "services.scalable.index.grpc.IndexCommand";

  string indexId = 1;
  repeated services.scalable.index.grpc.KVPair list = 2;
  optional string version = 3;
}
